--- a/client/src/pages/Homepage/Homepage.css
+++ b/client/src/pages/Homepage/Homepage.css
@@ -6,7 +6,7 @@
   background-size: cover; 
   background-position: center; 
   position: relative; 
-  justify-content: space-between;
+  justify-content: space-around;
   flex-direction: column;
   align-items: center;
 }
