--- a/client/src/pages/SearchPage/Smallphone/Smallphone.css
+++ b/client/src/pages/SearchPage/Smallphone/Smallphone.css
@@ -6,14 +6,16 @@
     flex-direction: column;
     align-items: center;
     background-color: rgba(175, 175, 175, 0.6);
-    border: 2px solid green;
     border-radius: 10px;
     margin: 3rem;
+    transition: 1s;
 }
 .smallphone-main-div:hover
 {
+    transform: scale(1.05);
     background-color: rgb(175, 175, 175);
     cursor: pointer;
+    
 }
 .smallphone-image
 {
