--- a/client/src/pages/SignUp/SignUp.css
+++ b/client/src/pages/SignUp/SignUp.css
@@ -13,11 +13,12 @@
 }
 .sign_up_container
 {
+  padding: 20px;
     width: 50%;
     height: 80%;
     background-color: rgba(255, 255, 255, 0.4);
     border-radius: 7px;
-    border: 5px solid #f900ff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);
     display: flex;
     flex-direction: column;
     align-items: center;
